# entra-validation-app

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  entra_test_cli.py  pixi.toml  pyproject.toml
.github/workflows/: deploy.yml
docs/: ARCHITECTURE.md  TESTING.md  USAGE.md  credential-testing.md  nih-entra-guide.docx
public/: app.js  config.json.example  index.html  styles.css
tests/: test_browser_helper_playwright.py  test_entra_test_cli.py
