[project]
name = "entra-credentials-validator"
version = "0.1.0"
description = "Helper CLI + browser workflow for validating NIH Microsoft Entra registrations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "Flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
entra-credentials-validator = "entra_test_cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["entra_test_cli"]
