[project]
name = "entra-credentials-validator"
version = "0.1.0"
description = "OAuth 2.0 / OIDC validation tool for Microsoft Entra app registrations with PKCE and SPA support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
entra-credentials-validator = "entra_test_cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["entra_test_cli"]
